--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,8 @@ body::before {
   width: 70vw;
   position: relative;
   overflow: hidden;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
+    0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .slide {
